tutorial/curbside-pickup/physical-ops/k8s/mysql-database.yaml
# Deployment for MySQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          args: ["--default-authentication-plugin=mysql_native_password"]
          volumeMounts:
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d/01_init.sql
              subPath: 01_init.sql
            - name: mysql-permissions
              mountPath: /docker-entrypoint-initdb.d/02_permissions.sql
              subPath: 02_permissions.sql
            - name: mysql-seed-data
              mountPath: /docker-entrypoint-initdb.d/03_seed_data.sql
              subPath: 03_seed_data.sql
            - name: mysql-cdc-config
              mountPath: /etc/mysql/conf.d
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          ports:
            - containerPort: 3306
      volumes:
        - name: mysql-init
          configMap:
            name: mysql-init
        - name: mysql-permissions
          configMap:
            name: mysql-permissions
        - name: mysql-seed-data
          configMap:
            name: mysql-seed-data
        - name: mysql-cdc-config
          configMap:
            name: mysql-cdc-config
---
# Service for MySQL
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
